--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <title>Document</title>
+    <title>RubySoho</title>
   </head>
   <body>
     <!--Splash page-->
